[package]
name = "rustGraphic"
version = "0.1.0"
authors = ["dongbo <895188445@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
metal = ["gfx-backend-metal"]
dx12 = ["gfx-backend-dx12"]
vulkan = ["gfx-backend-vulkan"]

[dependencies]
log = "0.4.8"
simple_logger = "1.3.0"
winit = "0.19.5"
gfx-hal = "0.4.1"
arrayvec = "0.5.1"

[dependencies.gfx-backend-vulkan]
version = "0.4.0"
optional = true

[target.'cfg(target_os = "macos")'.dependencies.gfx-backend-metal]
version = "0.4.2"
optional = true

[target.'cfg(windows)'.dependencies.gfx-backend-dx12]
version = "0.4.1"
optional = true