[package]
name = "rustGraphic"
version = "0.1.0"
authors = ["dongbo <895188445@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.8"
simple_logger = "1.3.0"
winit = "0.19.5"
gfx-hal = "0.4.1"
arrayvec = "0.5.1"
gfx-backend-vulkan="0.4.0"
